fixed portal view overflow

--- a/src/styles/ui-fits.scss
+++ b/src/styles/ui-fits.scss
@@ -14,6 +14,9 @@
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
+#app {
+  min-width: 100% !important;
+}
 
 .main-container {
   overflow: hidden;
